--- a/rwd-projekt2.css
+++ b/rwd-projekt2.css
@@ -6,11 +6,18 @@
 }
 
 .container {
-  width: 960px;
+  width: 768px;
   height: 100%;
   margin-left: auto;
   margin-right: auto;
 }
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 960px;
+  }
+}
+
 #nav-bar {
   width: auto;
   padding: 20px 30px;
