--- a/rwd-projekt2.css
+++ b/rwd-projekt2.css
@@ -6,12 +6,21 @@
 }
 
 .container {
-  width: 768px;
+  width: 100%;
   height: 100%;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
 }
 
+@media screen and (min-width: 768px) {
+  .container {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 960px) {
+  .container {
+    width: 768px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .container {
     width: 960px;
