--- a/rwd-projekt2.css
+++ b/rwd-projekt2.css
@@ -32,7 +32,7 @@
 } */
 
 #nav-bar {
-  padding: 20px 30px;
+  padding: 20px 25px;
   background-color: #4e4e4e;
   color: white;
   display: flex;
@@ -132,11 +132,9 @@ h3 {
   margin: 0 auto;
 }
 
-.opis {
+.opis,
+.opis-right {
   text-align: justify;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 @media screen and (min-width: 960px) {
@@ -149,13 +147,21 @@ h3 {
     justify-content: space-around;
     gap: 20px;
   }
-  .opis {
+
+  .opis,
+  .opis-right {
     margin: 0%;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
     justify-content: space-evenly;
   }
+  .opis {
+    text-align: left;
+  }
+  .opis-right {
+    text-align: right;
+  }
+
   .people:nth-of-type(even) {
     flex-direction: row-reverse;
   }
